--- a/UniversityRacerX.vcxproj.filters
+++ b/UniversityRacerX.vcxproj.filters
@@ -13,6 +13,21 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\3ds">
+      <UniqueIdentifier>{b1b92f9a-e769-4d23-8138-8106227ca50e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\3ds\chunk">
+      <UniqueIdentifier>{2b0e0ed3-3835-4c5e-9a26-6bc2acb278d2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\3ds\light">
+      <UniqueIdentifier>{5d77ad7a-b717-40cd-b2ab-235fa53d20fc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\3ds\material">
+      <UniqueIdentifier>{1ba0dc16-20fa-4153-b04e-2bb5e6f24f93}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\3ds\mesh">
+      <UniqueIdentifier>{2d4e7438-901a-4f3f-9825-370e2b2d6da9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseApp.cpp">
@@ -64,132 +79,132 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="3ds\scene3ds.cpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds</Filter>
     </ClCompile>
     <ClCompile Include="3ds\chunk\chunk.cpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\chunk</Filter>
     </ClCompile>
     <ClCompile Include="3ds\chunk\file.cpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\chunk</Filter>
     </ClCompile>
     <ClCompile Include="3ds\light\light3ds.cpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\light</Filter>
     </ClCompile>
     <ClCompile Include="3ds\light\light3dsobject.cpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\light</Filter>
     </ClCompile>
     <ClCompile Include="3ds\material\material3ds.cpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\material</Filter>
     </ClCompile>
     <ClCompile Include="3ds\material\material3dsobject.cpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\material</Filter>
     </ClCompile>
     <ClCompile Include="3ds\mesh\mesh3ds.cpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\mesh</Filter>
     </ClCompile>
     <ClCompile Include="3ds\mesh\mesh3dsobject.cpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\mesh</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BaseApp.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="BaseModel.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Camera.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Debug.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Exceptions.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="FpsCounter.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Game.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="GameTime.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Gui.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Light.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="main.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Mesh.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ModelContainer.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Physics.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="PhysicsCar.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="PhysicsCarConfig.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="PhysicsCheckpoint.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="PhysicsDebugDraw.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="PhysicsUtils.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Scene.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ShaderManager.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ShadowVolumes.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Utils.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="3ds\3ds.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds</Filter>
     </ClInclude>
     <ClInclude Include="3ds\scene3ds.h">
+      <Filter>Header Files\3ds</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseApp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseModel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Debug.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Exceptions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FpsCounter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameTime.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Gui.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ModelContainer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Physics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsCar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsCarConfig.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsCheckpoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsDebugDraw.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ShaderManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ShadowVolumes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="3ds\chunk\chunk.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\chunk</Filter>
     </ClInclude>
     <ClInclude Include="3ds\chunk\file.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\chunk</Filter>
     </ClInclude>
     <ClInclude Include="3ds\light\light3ds.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\light</Filter>
     </ClInclude>
     <ClInclude Include="3ds\light\light3dsobject.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="3ds\material\material3ds.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\light</Filter>
     </ClInclude>
     <ClInclude Include="3ds\material\material3dsobject.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\material</Filter>
     </ClInclude>
-    <ClInclude Include="3ds\mesh\mesh3ds.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="3ds\material\material3ds.h">
+      <Filter>Header Files\3ds\material</Filter>
     </ClInclude>
     <ClInclude Include="3ds\mesh\mesh3dsobject.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds\mesh</Filter>
+    </ClInclude>
+    <ClInclude Include="3ds\mesh\mesh3ds.h">
+      <Filter>Header Files\3ds\mesh</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -200,7 +215,7 @@
       <Filter>Source Files</Filter>
     </None>
     <None Include="3ds\README">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\3ds</Filter>
     </None>
   </ItemGroup>
 </Project>
