--- a/UniversityRacerX.vcxproj
+++ b/UniversityRacerX.vcxproj
@@ -41,12 +41,12 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>C:\Users\misha\Downloads\bullet-2.79-rev2440\bullet-2.79\src;C:\Users\misha\Documents\GitHub\SDL-1.2\include;C:\Users\misha\Downloads\glew-2.2.0-win32\glew-2.2.0\include;C:\Users\misha\Downloads\glm-0.9.0.7\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\misha\Downloads\bullet-2.79-rev2440\bullet-2.79\src;C:\Users\misha\Downloads\glew-2.2.0-win32\glew-2.2.0\include;C:\Users\misha\Downloads\glm-0.9.0.7\glm;C:\Users\misha\Documents\GitHub\SDL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\misha\Downloads\bullet-2.79-rev2440\bullet-2.79\lib;C:\Users\misha\Documents\GitHub\SDL-1.2\VisualC\SDL\Win32\Debug;C:\Users\misha\Documents\GitHub\SDL-1.2\VisualC\SDLmain\Win32\Debug;C:\Users\misha\Downloads\glew-2.2.0-win32\glew-2.2.0\lib\Release\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;BulletCollision_debug.lib;BulletDynamics_debug.lib;LinearMath_debug.lib;SDL.lib;SDLmain.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\misha\Downloads\bullet-2.79-rev2440\bullet-2.79\lib;C:\Users\misha\Downloads\glew-2.2.0-win32\glew-2.2.0\lib\Release\Win32;C:\Users\misha\Documents\GitHub\SDL\VisualC\Win32\Debug;C:\Users\misha\Documents\GitHub\SDL\VisualC\SDLmain\Win32\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;BulletCollision_debug.lib;BulletDynamics_debug.lib;LinearMath_debug.lib;SDL2.lib;SDL2main.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
     </Link>
